--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.11.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "firebase": "^12.0.0",
     "html2canvas": "1.4.1",
     "jspdf": "^3.0.1",
@@ -19,6 +20,9 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
