--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,11 @@
 {
+  "projectId": "axonium-fr",
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
   },
   "functions": {
     "source": "functions"
