--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+
     "@google/genai": "^1.11.0",
     "@tailwindcss/postcss": "^4.1.11",
+
     "firebase": "^12.0.0",
     "html2canvas": "1.4.1",
     "jspdf": "^3.0.1",
+    "multer": "^2.0.2",
     "pdfjs-dist": "4.10.38",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.14.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
